--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -7,11 +7,10 @@ icon: fa-comment
 order: 1
 ---
 <header>
-  <h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-  site template designed by <a href="http://html5up.net/prologue">HTML5 UP</a>.</h2>
-  <p>Adapted for Jekyll by <a href=https://chrisbobbe.github.io/>Chris Bobbe</a>. Get started on <a href="https://github.com/chrisbobbe/jekyll-theme-prologue">GitHub!</a></p>
+  <h2 class="alt">Hi! I'm <strong>Prologue</strong>Mike Chan. This is a blog to record my <br />
+  learning in Tech. Feel free to visit my <a href="https://github.com/mikekitckchan">GitHub</a></h2>
 </header>
 
 <footer>
-  <a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+  <a href="#blog" class="button scrolly">Visit my blog post</a>
 </footer>
