--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -7,10 +7,10 @@ icon: fa-comment
 order: 1
 ---
 <header>
-  <h2 class="alt">Hi! I'm <strong>Prologue</strong>Mike Chan. This is a blog to record my <br />
+  <h2 class="alt">Hi! I'm <strong>Mike Chan</strong>. This is a blog to record my <br />
   learning in Tech. Feel free to visit my <a href="https://github.com/mikekitckchan">GitHub</a></h2>
 </header>
 
 <footer>
-  <a href="#blog" class="button scrolly">Visit my blog post</a>
+  <a href="blog.html" class="button scrolly">Visit my blog post</a>
 </footer>
