--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -10,7 +10,7 @@ order: 1
   <h2 class="alt">Hi! I'm <strong>Mike Chan</strong>. This is a blog to record my <br />
   learning in Tech. Feel free to visit my <a href="https://github.com/mikekitckchan">GitHub</a></h2>
 </header>
-
+<p> If you have any comments, please feel free to contact me by clicking the button below.</p>
 <footer>
-  <a href="blog.html" class="button scrolly">Visit my blog post</a>
+  <a href="#contact" class="button scrolly">Contact Me</a>
 </footer>
